# arpeggiator-mjau

./: README.md  flash_esp32.py  main.py  pyproject.toml  requirements-esp32.txt
arpeggiator/: __init__.py
arpeggiator/cli/: __init__.py  main.py
arpeggiator/core/: __init__.py  arpeggio_engine.py  midi_out.py  music_theory.py
arpeggiator/gui/: __init__.py  app.py
arpeggiator/hardware/: __init__.py  esp32_bridge.py
esp32_firmware/: boot.py  main.py
