[project]
name = "arpeggiator"
version = "0.1.0"
description = "MIDI Arpeggiator with scales, modes, and patterns"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "midiutil>=1.2.1",
    "mido>=1.3.3",
    "pyserial>=3.5",
    "python-rtmidi>=1.5.8",
]

[project.scripts]
arpeggiator = "arpeggiator.cli.main:main"
arpeggiator-gui = "arpeggiator.gui.app:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["arpeggiator*"]
